tests/rosetta/out/Fortran/arithmetic-rational.error
gfortran: exit status 1
/tmp/arithmetic-rational.f90:68:7:

   68 |       n = nums(i0)
      |       1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
